chapter11/simple-opa-policy/yaml/gatekeeper-policy.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRegistries
metadata:
  name: restrict-openunison-registries
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds:
        - Pods
        - Deployments
        - StatefuleSets
        - CronJobs
    namespaces: ["openunison"]
  parameters: {}
